libs/@local/hashql/ast/tests/ui/lowering/type-extractor/dict-parameter-count-mismatch.jsonc
//@ run: fail
//@ description: Tests List intrinsic with wrong parameter count
[
  "type",
  "EmptyDict",
  "Dict<String>",
  //~^ ERROR Intrinsic `::kernel::type::Dict` needs 2 parameters, but found 1
  [
    "type",
    "TooManyDict",
    "Dict<String, Number, String>",
    //~^ ERROR Intrinsic `::kernel::type::Dict` takes 2 parameters, but found 3
    "_"
  ]
]
